--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    
+    <link rel="icon"  href="/Images/unnamed-removebg-preview.png" type="image/icon type"
     <title>המצלמה לא מתחברת למבחנים? כך תסדרו זאת!</title>
   </head>
+  </div>
+  <body>
+
   <div class="logo">
       <img src="/Images/unnamed-removebg-preview.png">
-    </div>
-  <body>
+  </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="/Images/186407_arrow_up_icon.svg"></button>
     <div class="top_banner">
       <h1>המצלמה לא מתחברת למבחנים? כך תסדרו זאת!</h1>
@@ -37,7 +39,9 @@
         <li><a href="#2">אני רואה מסך שחור במסך בדיקת המצלמה</a></li>
         <li><a href="#3">אני לא רואה את עצמי במסך בדיקת המצלמה</a></li>
     </ul>
-    <div class="header"><h2 id="1">אני רואה את עצמי במסך בדיקת המצלמה</h2></div>
+    <div class="header">
+      <h2 id="1">אני רואה את עצמי במסך בדיקת המצלמה</h2>
+    </div>
     <ul class="see_himself">
       <li>1. יש לנקות את עינית המצלמה עם מטלית או חתיכת בד</li>
       <li>2. יש לוודא שאין אור חוזק מאחורייך (חלון או מקור אור אחר)</li>
@@ -48,45 +52,79 @@
       <h2 id="2">אני רואה מסך שחור במסך בדיקת המצלמה</h2>
     </div>
       <p>אם הנך רואה מסך שחור, המצלמה מכוסה ויש להוריד את הכיסוי.</p>
-    <div class="header">
-    <h2 id="3">אני לא רואה את עצמי במסך בדיקת המצלמה</h2>
-    </div>
+          <div class="header">
+        <h2 id="3">אני לא רואה את עצמי במסך בדיקת המצלמה</h2>
+      </div>
       <h3>אם על המסך מופיעה התמונה הבאה:</h3>
-      <img class="screenshot" src="/Images/1.png" />
-      <p>
-        יש ללחוץ על כפתור ה F8 / F10 בשורה העליונה ביותר במקלדת. (לפעמים צריך
+      <div class="header flex">
+        <p>
+        יש ללחוץ על כפתור ה F8 / F10 בשורה העליונה ביותר במקלדת.<br> (לפעמים צריך
         ללחוץ יחד עם כפתור ה Fn הממוקם בצד שמאל למטה במקלדת).<br>
         במידה ולחיצה על כפתורים אלו לא פתחו את המצלמה, יש לבדוק אם קיימת חלונית הזזה פיזית על מצלמת המחשב.<br>
         אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה
-      </p>
-    <div class="header">
-        <h3>אם על המסך מופיעה התמונה הבאה:</h3>
-    </div>
-        <img class="screenshot" src="/Images/2.png" />
-        <p>יש לוודא שהמצלמה מאופשרת בדפדפן:</p>
-        <img class="screenshot" src="/Images/camera ap.png" />
-        <p>אם סימן המצלמה נראה כמו בתמונה מעלה - סימן שהמצלמה מאופשרת.</p>
+        </p>
+        <img class="screenshot" src="/Images/1.png" />
+      </div>
+        <div class="header">
+          <h3>אם על המסך מופיעה התמונה הבאה:</h3>
+        </div>
+        <div class="header flex">
+          <div>
+          <p>יש לוודא שהמצלמה מאופשרת בדפדפן:<br><br>
+          <img class="screenshot" src="/Images/camera ap.png" ><br>
+          אם סימן המצלמה נראה כמו בתמונה מעלה - סימן שהמצלמה מאופשרת.
+          </div>
+        </p>
+          <img class="screenshot" src="/Images/2.png" />
+        </div>
+        <div class="flex">
         <p>
           אם על סימן המצלמה יש X אדום, סימן שהיא חסומה - יש ללחוץ על הציור של
-          המצלמה כפי שמתואר בתמונה מעלה ולאפשר את המצלמה כמו בתמונה מטה.<br>
-          לאחר מכן יש לסגור את חלון המבחן ולהיכנס שוב דרך הקישור במייל.
+          המצלמה כפי שמתואר בתמונה ולאפשר את השימוש במצלמה.<br>
+          לאחר מכן יש לסגור את חלון המבחן ולהיכנס שוב דרך הקישור בתיבת המייל.
         </p>
         <img class="screenshot" src="/Images/3.png" />
+        </div>
       <div class="header">
-        <h3>עדיין לא רואה את עצמך במסך בדיקת המצלמה?</h3>
+        <h2>עדיין לא רואה את עצמך במסך בדיקת המצלמה?</h3>
       </div>
         <p>
           <strong
-            >יש לבדוק האם התוכנה המקורית של המצלמה במחשב מזהה את המצלמה:</strong
-          ><br />
+            >יש לבדוק האם התוכנה המקורית של המצלמה במחשב מזהה את המצלמה:</strong>
+          </p>
+          <div class="flex">
+            <p>
           ראשית, במידה וחלון הבחינה פתוח, יש לסגור אותו.<br>
           יש ללחוץ על כפתור ה-Windows בתחתית המסך ולהקליד את המילה "מצלמה" (אם
-          שפת ממשק המחשב היא באנגלית, יש לחפש "Camera".</p>
-          <img class="screenshot" src="/Images/4.png" />
-        <p>יש ללחוץ על התוכנה ולבדוק את תקינות המצלמה.<br>
-        אם מופיע מסך שגיאה כלשהו הדומה לתמונה מטה, יש לוודא שאכן סגרת את כל התוכנות שעלולות לבצע שימוש במצלמה</p>
-        </p>
-        <img class="screenshot" src="/Images/5.png">
+          שפת ממשק המחשב היא באנגלית, יש לחפש "Camera".
+            </p>
+            <img class="screenshot" src="/Images/4.png" />
+          </div>
+          <div class="flex">
+            <p>
+              יש ללחוץ על התוכנה ולבדוק את תקינות המצלמה.<br>
+              אם מופיע מסך שגיאה כלשהו הדומה לתמונה, יש לוודא שאכן סגרת את כל התוכנות שעלולות לבצע שימוש במצלמה.<br>
+              אם סגירת כל התוכנות הנוספות לא פתרה את הבעיה, יש לבצע אתחול מחדש של המחשב ולהיכנס שוב למבחנים.<br>
+               אם הבעיה עדיין לא נפתרה, יש לנסות להתחבר ממחשב אחר בעל מצלמה תקינה.
+            </p>
+            <img class="screenshot" src="/Images/5.png">
+          </div>
+          <p>
+          </p>
+          <p>
+            <h3>אם המצלמה אכן תקינה בתוכנת המחשב, יש להיכנס לאתר <a href="https://webcamtests.com" target="_blank">Webcamtests</a> ולבצע את השלבים הבאים:</h3>
+          </p>
+          <div class="flex">
+            <img class="screenshot" src="/Images/6.png">
+            <p>
+              ראשית, יש לוודא שהאתר מצליח לזהות את מצלמת המחשב.<br>
+              נרצה לראות משהו הדומה לתמונה<br>
+              ניתן לראות שהאתר מצליח לזהות את מצלמת המחשב אך היא אינה מחוברת.<br>
+              אם אתר זה לא הצליח לזהות את המצלמה, יש לנסות שוב דרך דפדפן "FireFox" ולנסות שוב.<br>
+              אם האתר עדיין לא מצליח לזהות את המצלמה, יש לבדוק האם מותקנות תוכנות אנטיוירוס על המחשב אשר עלולות למנוע גישה למצלמה.<br><br>
+              יש ללחוץ על כפתור "Test my cam".
+            </p>
+          </div>
       <script src="main.js"></script>
   </body>
 </html>
