--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon"  href="/Images/unnamed-removebg-preview.png" type="image/icon type"
+    <link rel="icon"  href="/Images/unnamed-removebg-preview.png" type="image/icon type">
     <title>המצלמה לא מתחברת למבחנים? כך תסדרו זאת!</title>
   </head>
   </div>
@@ -44,7 +44,7 @@
     </div>
     <ul class="see_himself">
       <li>1. יש לנקות את עינית המצלמה עם מטלית או חתיכת בד</li>
-      <li>2. יש לוודא שאין אור חוזק מאחורייך (חלון או מקור אור אחר)</li>
+      <li>2. יש לוודא שאין אור חזק מאחורייך (חלון או מקור אור אחר)</li>
       <li>3. יש למקם את פניך מול המצלמה בצורה ברורה וקרובה</li>
       <li>4. יש ללחוץ על כפתור "הבא" הממוקם בצד שמאל מטה במסך בדיקת המצלמה</li>
     </ul>
@@ -61,7 +61,7 @@
         יש ללחוץ על כפתור ה F8 / F10 בשורה העליונה ביותר במקלדת.<br> (לפעמים צריך
         ללחוץ יחד עם כפתור ה Fn הממוקם בצד שמאל למטה במקלדת).<br>
         במידה ולחיצה על כפתורים אלו לא פתחו את המצלמה, יש לבדוק אם קיימת חלונית הזזה פיזית על מצלמת המחשב.<br>
-        אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה
+        אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה.
         </p>
         <img class="screenshot" src="/Images/1.png" />
       </div>
@@ -115,16 +115,34 @@
             <h3>אם המצלמה אכן תקינה בתוכנת המחשב, יש להיכנס לאתר <a href="https://webcamtests.com" target="_blank">Webcamtests</a> ולבצע את השלבים הבאים:</h3>
           </p>
           <div class="flex">
-            <img class="screenshot" src="/Images/6.png">
             <p>
               ראשית, יש לוודא שהאתר מצליח לזהות את מצלמת המחשב.<br>
-              נרצה לראות משהו הדומה לתמונה<br>
+              נרצה לראות משהו הדומה לתמונה.<br>
               ניתן לראות שהאתר מצליח לזהות את מצלמת המחשב אך היא אינה מחוברת.<br>
               אם אתר זה לא הצליח לזהות את המצלמה, יש לנסות שוב דרך דפדפן "FireFox" ולנסות שוב.<br>
               אם האתר עדיין לא מצליח לזהות את המצלמה, יש לבדוק האם מותקנות תוכנות אנטיוירוס על המחשב אשר עלולות למנוע גישה למצלמה.<br><br>
-              יש ללחוץ על כפתור "Test my cam".
+              <strong>יש ללחוץ על כפתור "Test my cam".</strong>
             </p>
+            <img class="screenshot" src="/Images/6.png">
           </div>
+          <div class="flex">
+            <p>
+              לאחר מכן, יש לתת אישור למצלמה להתחבר לאתר.
+            </p>
+            <img class="screenshot" src="/Images/7.png">
+          </div>
+          <div class="flex">
+            <p>
+              לאחר אישור המצלמה, נוודא שהאתר הצליח להתחבר למצלמה כמו בתמונה.<br>
+              <strong>נלחץ על כפתור "Test my cam".</strong><br>
+              בשלב זה תמונת אמורה להופיע על המסך.
+            </p>
+            <img src="/Images/8.png" alt="" class="screenshot">
+          </div>
+          <p>
+            נכנס חזרה אל המבחנים דרך הקישור בתיבת המייל ונראה אם המצלמה מתחברת.<br>
+            במידה ולא, יש לנסות שוב דרך דפדפן "FireFox" ולוודא שאין אנטיוירוסים מותקנים על המחשב אשר עלולים להפריע להרשאות חיבור המצלמה.
+          </p>
       <script src="main.js"></script>
   </body>
 </html>
