--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
   </div>
   <body>
     <div class="header">
-      <div class="logo">
-          <img src="Images/unnamed-removebg-preview.png">
-      </div>
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>
           עברית
@@ -30,10 +27,10 @@
             <div class="dropdown-links">
               <a href="#" class="link">
                 English
-                <img src=Images/United_States.png">
+                <img src="Images/United_States.png">
               </a>
               <a href="#" class="link">
-                español
+                Español
                 <img src="Images/Spain.png">
               </a>
               <a href="#" class="link">
@@ -46,10 +43,13 @@
               </a>
             </div>
           </div>
-          </div>
         </div>
       </div>
+    <div class="logo">
+        <img src="Images/unnamed-removebg-preview.png">
     </div>
+    </div>
+    <main>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="Images/186407_arrow_up_icon.svg"></button>
     <div class="top_banner">
       <h1>המצלמה לא מתחברת למבחנים? כך תסדרו זאת!</h1>
@@ -69,7 +69,7 @@
         <li><a href="#2">אני רואה מסך שחור במסך בדיקת המצלמה</a></li>
         <li><a href="#3">אני לא רואה את עצמי במסך בדיקת המצלמה</a></li>
     </ul>
-    <div class="header">
+    <div>
       <h2 id="1">אני רואה את עצמי במסך בדיקת המצלמה</h2>
     </div>
     <ul class="see_himself">
@@ -78,33 +78,34 @@
       <li>3. יש למקם את פניך מול המצלמה בצורה ברורה וקרובה</li>
       <li>4. יש ללחוץ על כפתור "הבא" הממוקם בצד שמאל מטה במסך בדיקת המצלמה</li>
     </ul>
-    <div class="header">
+    <div>
       <h2 id="2">אני רואה מסך שחור במסך בדיקת המצלמה</h2>
     </div>
       <p>אם הנך רואה מסך שחור, המצלמה מכוסה ויש להוריד את הכיסוי.</p>
-          <div class="header">
+        <div>
         <h2 id="3">אני לא רואה את עצמי במסך בדיקת המצלמה</h2>
       </div>
       <h3>אם על המסך מופיעה התמונה הבאה:</h3>
-      <div class="header flex">
-        <p>
-        יש ללחוץ על כפתור ה F8 / F10 בשורה העליונה ביותר במקלדת.<br> (לפעמים צריך
-        ללחוץ יחד עם כפתור ה Fn הממוקם בצד שמאל למטה במקלדת).<br>
-        במידה ולחיצה על כפתורים אלו לא פתחו את המצלמה, יש לבדוק אם קיימת חלונית הזזה פיזית על מצלמת המחשב.<br>
-        אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה.
-        </p>
+      <div class="flex">
+          <p>
+          יש ללחוץ על כפתור ה F8 / F10 בשורה העליונה ביותר במקלדת.<br> (לפעמים צריך
+          ללחוץ יחד עם כפתור ה Fn הממוקם בצד שמאל למטה במקלדת).<br>
+          במידה ולחיצה על כפתורים אלו לא פתחו את המצלמה, יש לבדוק אם קיימת חלונית הזזה פיזית על מצלמת המחשב.<br>
+          אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה.
+          </p>
+        
         <div class="photo"><img class="screenshot" src="Images/1.png" /></div>
       </div>
-        <div class="header">
+        <div>
           <h3>אם על המסך מופיעה התמונה הבאה:</h3>
         </div>
-        <div class="header flex">
+        <div class="flex">
           <div>
-          <p>יש לוודא שהמצלמה מאופשרת בדפדפן:<br><br>
+          יש לוודא שהמצלמה מאופשרת בדפדפן:<br><br>
           <div class="photo"><img class="screenshot" src="Images/camera ap.png" ></div>
           <br>אם סימן המצלמה נראה כמו בתמונה מעלה - סימן שהמצלמה מאופשרת.
           </div>
-        </p>
+        
           <div class="photo"><img class="screenshot" src="Images/2.png" /></div>
         </div>
         <div class="flex">
@@ -115,7 +116,7 @@
         </p>
         <div class="photo"><img class="screenshot" src="Images/3.png" /></div>
         </div>
-      <div class="header">
+      <div>
         <h2>עדיין לא רואה את עצמך במסך בדיקת המצלמה?</h3>
       </div>
         <p>
@@ -174,5 +175,6 @@
             במידה ולא, יש לנסות שוב דרך דפדפן "FireFox" ולוודא שאין אנטיוירוסים מותקנים על המחשב אשר עלולים להפריע להרשאות חיבור המצלמה.
           </p>
       <script src="main.js"></script>
+    </main>
   </body>
 </html>
