--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <li><a href="#2">אני רואה מסך שחור במסך בדיקת המצלמה</a></li>
         <li><a href="#3">אני לא רואה את עצמי במסך בדיקת המצלמה</a></li>
     </ul>
-    <div>
+    <div class="h2div">
       <h2 id="1">אני רואה את עצמי במסך בדיקת המצלמה</h2>
     </div>
     <ul class="see_himself">
@@ -82,7 +82,7 @@
       <h2 id="2">אני רואה מסך שחור במסך בדיקת המצלמה</h2>
     </div>
       <p>אם הנך רואה מסך שחור, המצלמה מכוסה ויש להוריד את הכיסוי.</p>
-        <div>
+        <div class="h2div">
         <h2 id="3">אני לא רואה את עצמי במסך בדיקת המצלמה</h2>
       </div>
       <h3>אם על המסך מופיעה התמונה הבאה:</h3>
@@ -93,10 +93,9 @@
           במידה ולחיצה על כפתורים אלו לא פתחו את המצלמה, יש לבדוק אם קיימת חלונית הזזה פיזית על מצלמת המחשב.<br>
           אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה.
           </p>
-        
         <div class="photo"><img class="screenshot" src="Images/1.png" /></div>
       </div>
-        <div>
+        <div class="h2div">
           <h3>אם על המסך מופיעה התמונה הבאה:</h3>
         </div>
         <div class="flex">
@@ -105,7 +104,6 @@
           <div class="photo"><img class="screenshot" src="Images/camera ap.png" ></div>
           <br>אם סימן המצלמה נראה כמו בתמונה מעלה - סימן שהמצלמה מאופשרת.
           </div>
-        
           <div class="photo"><img class="screenshot" src="Images/2.png" /></div>
         </div>
         <div class="flex">
@@ -116,7 +114,7 @@
         </p>
         <div class="photo"><img class="screenshot" src="Images/3.png" /></div>
         </div>
-      <div>
+      <div class="h2div">
         <h2>עדיין לא רואה את עצמך במסך בדיקת המצלמה?</h3>
       </div>
         <p>
