--- a/index.html
+++ b/index.html
@@ -54,15 +54,17 @@
     <div class="top_banner">
       <h1>המצלמה לא מתחברת למבחנים? כך תסדרו זאת!</h1>
     </div>
-    <p>
-      מערכת המבחנים נתמכת רק בדפדפנים Google Chrome או Firefox.<br />
+    <div class="h2div">
+      <h2>וידוא דפדפנים נתמכים</h2>
+    </div>
+    <p class="top">
+      מערכת המבחנים נתמכת רק בדפדפנים <a class="hyper_link" href="https://www.google.com/chrome/">Google Chrome</a> או <a href="https://www.mozilla.org/en-US/firefox/new/" class="hyper_link">Firefox</a>.<br />
       יש לוודא שימוש בדפדפנים אלו בלבד ולא באף דפדפן אחר.<br />
       אם בבעלותך מחשב מסוג Mac יש לוודא שימוש בדפדפן המתאים (דפדפן Safari אינו
       נתמך).<br />
-      שנית, יש לסגור את כל התוכנות שעלולות לעשות שימוש במצלמה (זום, סקייפ
+      יש לסגור את כל התוכנות שעלולות לעשות שימוש במצלמה (זום, סקייפ
       וכדומה).<br /><br />
-      אם סגירת כל התוכנות הנוספות לא פתרה את הבעיה, יש לסגור את חלון המבחן ולבצע
-      את השלבים מטה:
+      במקרה שבו סגירת כל התוכנות הנוספות לא פתרה את הבעיה, יש לסגור את חלון המבחן ולעקוב אחר ההוראות ע"פ הבעיה בה נתקלת:
     </p>
     <ul class="posttip">
         <li><a href="#1">אני רואה את עצמי במסך בדיקת המצלמה</a></li>
@@ -141,7 +143,7 @@
           <p>
           </p>
           <p>
-            <h3>אם המצלמה אכן תקינה בתוכנת המחשב, יש להיכנס לאתר <a href="https://webcamtests.com" target="_blank">Webcamtests</a> ולבצע את השלבים הבאים:</h3>
+            <h3>אם המצלמה אכן תקינה בתוכנת המחשב, יש להיכנס לאתר <a class="hyper_link" href="https://webcamtests.com" target="_blank">Webcamtests</a> ולבצע את השלבים הבאים:</h3>
           </p>
           <div class="flex">
             <p>
