Links will open in new tabs

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h2>וידוא דפדפנים נתמכים</h2>
     </div>
     <p class="top">
-      מערכת המבחנים נתמכת רק בדפדפנים <a class="hyper_link" href="https://www.google.com/chrome/">Google Chrome</a> או <a href="https://www.mozilla.org/en-US/firefox/new/" class="hyper_link">Firefox</a>.<br />
+      מערכת המבחנים נתמכת רק בדפדפנים <a class="hyper_link" href="https://www.google.com/chrome/" target="_blank">Google Chrome</a> או <a href="https://www.mozilla.org/en-US/firefox/new/" class="hyper_link" target="_blank">Firefox</a>.<br />
       יש לוודא שימוש בדפדפנים אלו בלבד ולא באף דפדפן אחר.<br />
       אם בבעלותך מחשב מסוג Mac יש לוודא שימוש בדפדפן המתאים (דפדפן Safari אינו
       נתמך).<br />
