--- a/index.html
+++ b/index.html
@@ -22,29 +22,14 @@
   <body>
     <div class="header">
       <div class="dropdown" data-dropdown>
-        <button class="link" data-dropdown-button>
-          עברית
-          <img src="Images/Israel.png" />
-        </button>
+        <button class="link" data-dropdown-button>עברית HE</button>
         <div class="dropdown-menu information-grid">
           <div>
             <div class="dropdown-links">
-              <a href="#" class="link">
-                English
-                <img src="Images/United_States.png" />
-              </a>
-              <a href="#" class="link">
-                Español
-                <img src="Images/Spain.png" />
-              </a>
-              <a href="#" class="link">
-                عربيه
-                <img src="Images/Arab_Nations.png" />
-              </a>
-              <a href="#" class="link">
-                Русский
-                <img src="Images/Russia.png" />
-              </a>
+              <a href="#" class="link">English EN</a>
+              <a href="#" class="link">Español ES</a>
+              <a href="#" class="link">AR عربيه</a>
+              <a href="#" class="link">Русский RU</a>
             </div>
           </div>
         </div>
