Started on english translation Page adapt to LTR

--- a/index_en.html
+++ b/index_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -20,13 +20,13 @@
   </head>
 
   <body>
-    <nav class="header">
+    <nav class="header" dir="rtl">
       <div class="dropdown" data-dropdown>
-        <button class="link" data-dropdown-button>עברית HE</button>
+        <button class="link" data-dropdown-button>English EN</button>
         <div class="dropdown-menu information-grid">
           <div>
             <div class="dropdown-links">
-              <a href="index_en.html" class="link">English EN</a>
+              <a href="index.html" class="link">עברית HE</a>
               <a href="#" class="link">Español ES</a>
               <a href="#" class="link">AR عربيه</a>
               <a href="#" class="link">Русский RU</a>
@@ -43,54 +43,63 @@
         <img src="Images/186407_arrow_up_icon.svg" />
       </button>
       <div class="top_banner">
-        <h1>המצלמה לא מתחברת למערכת? כך תסדרו זאת!</h1>
+        <h1>The camera is not connecting? Here is how to fix it!</h1>
       </div>
-      <h2 class="h2div">וודאו שהמערכת תומכת בדפדפן</h2>
+      <h2 class="h2div">Verify that your browser supports the system</h2>
       <p class="top">
-        מערכת המבחנים נתמכת רק בדפדפנים
+        The system runs only on these browsers.
         <a
           class="hyper_link"
           href="https://www.google.com/chrome/"
           target="_blank"
           >Google Chrome</a
         >
-        או
+        or
         <a
           href="https://www.mozilla.org/en-US/firefox/new/"
           class="hyper_link"
           target="_blank"
           >Firefox</a
         >.<br />
-        יש לוודא שימוש בדפדפנים אלו בלבד ולא באף דפדפן אחר.<br />
-        אם בבעלותך מחשב מסוג Mac יש לוודא שימוש בדפדפן המתאים (דפדפן Safari אינו
-        נתמך).<br />
-        יש לסגור את כל התוכנות שעלולות לעשות שימוש במצלמה (זום, סקייפ
-        וכדומה).<br /><br />
-        במקרה שבו סגירת כל התוכנות הנוספות לא פתרה את הבעיה, יש לסגור את חלון
-        המבחן ולעקוב אחר ההוראות ע"פ הבעיה בה נתקלת:
+        You may only user there browsers.<br />
+        If you have a Mac computer, make sure to use the appropriate browser
+        (Safari browser is not supported).<br />
+        Close all programs that may make use of the camera (Zoom, Skype, etc).
+        <br /><br />
+        If closing all other programs did not solve the problem, close the test
+        window and follow the instructions according to the specific problem:
       </p>
 
       <button class="accordion h2div">
-        אני רואה את עצמי במסך בדיקת המצלמה
+        I can see myself in the camera test screen
       </button>
       <div class="panel">
         <ul class="see_himself">
-          <li>1. יש לנקות את עינית המצלמה עם מטלית או חתיכת בד</li>
-          <li>2. יש לוודא שאין אור חזק מאחורייך (חלון או מקור אור אחר)</li>
-          <li>3. יש למקם את פניך מול המצלמה בצורה ברורה וקרובה</li>
           <li>
-            4. יש ללחוץ על כפתור "הבא" הממוקם בצד שמאל מטה במסך בדיקת המצלמה
+            1. Please clean the camera eyepiece with a tissue or piece of cloth.
+          </li>
+          <li>
+            2. Please make sure there is no strong light begind you (window or
+            other light source).
+          </li>
+          <li>
+            3. Your face should be close and right in front of the camera.
+          </li>
+          <li>
+            4. Click on the "Next" button located on the lower right side of the
+            camera test screen.
           </li>
         </ul>
       </div>
 
       <button class="accordion h2div">
-        אני רואה מסך שחור במסך בדיקת המצלמה
+        I see a black screen on the camera test screen
       </button>
       <div class="panel">
         <div class="flex">
           <p>
-            אם הנך רואה מסך שחור, יש לוודא שכיסוי המצלמה מוסר והיא אינה מכוסה.
+            If you see a black screen, make sure the camera cover is removed and
+            that nothing is hiding it.
           </p>
           <div class="photo">
             <img class="screenshot" src="Images/blackscreen.png" />
@@ -99,16 +108,16 @@
       </div>
 
       <button class="accordion h2div">
-        אני לא רואה את עצמי במסך בדיקת המצלמה
+        I do not see myself on the camera test screen
       </button>
       <div class="panel">
         <h3>אם על המסך מופיעה התמונה הבאה:</h3>
         <div class="flex">
           <p>
-            יש ללחוץ על כפתור ה <strong>"F8"</strong> או
-            <strong>"F10"</strong> בשורה העליונה ביותר במקלדת.<br />
-            (לפעמים צריך ללחוץ יחד עם כפתור ה <strong>"Fn"</strong> הממוקם
-            בתחתית המקלדת במקלדת).<br />
+            Press the <strong>"F8"</strong> or "F10" button on the top row of
+            the keyboard<br />
+            Sometimes you have to press the <strong>"Fn"</strong> button
+            simutaneously located on the lower side of the keyboard.<br />
             במידה ולחיצה על כפתורים אלו לא הפעילו את המצלמה, יש לבדוק אם קיימת
             חלונית הזזה פיזית על מצלמת המחשב.<br />
             אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה.
