Photos in English added

--- a/index_en.html
+++ b/index_en.html
@@ -102,7 +102,7 @@
             that nothing is hiding it.
           </p>
           <div class="photo">
-            <img class="screenshot" src="Images/blackscreen.png" />
+            <img class="screenshot" src="Images/nocamerablack.png" />
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
         I do not see myself on the camera test screen
       </button>
       <div class="panel">
-        <h3>אם על המסך מופיעה התמונה הבאה:</h3>
+        <h3>If the following image appears on the screen:</h3>
         <div class="flex">
           <p>
             Press the <strong>F8</strong> or <strong>F10</strong> button on the
@@ -124,7 +124,7 @@
             If so, it must be moved to one side in order to activate the camera.
           </p>
           <div class="photo">
-            <img class="screenshot" src="Images/cameraclosed.png" />
+            <img class="screenshot" src="Images/nocamerablock.png" />
           </div>
         </div>
         <div class="h2div">
@@ -139,7 +139,9 @@
             <br />If the camera symbol looks like the image above - it means
             that the camera is enabled.
           </div>
-          <div class="photo"><img class="screenshot" src="Images/2.png" /></div>
+          <div class="photo">
+            <img class="screenshot" src="Images/nocamera.png" />
+          </div>
         </div>
         <div class="flex">
           <p>
