Only english on selector

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <div>
             <div class="dropdown-links">
               <a href="index_en.html" class="link">English EN</a>
-              <a href="#" class="link">Español ES</a>
+              <!-- <a href="#" class="link">Español ES</a>
               <a href="#" class="link">AR عربيه</a>
-              <a href="#" class="link">Русский RU</a>
+              <a href="#" class="link">Русский RU</a> -->
             </div>
           </div>
         </div>
