--- a/index_en.html
+++ b/index_en.html
@@ -47,7 +47,7 @@
       </div>
       <h2 class="h2div">Verify that your browser supports the system</h2>
       <p class="top">
-        The system runs only on these browsers.
+        The system runs only on these browsers:
         <a
           class="hyper_link"
           href="https://www.google.com/chrome/"
